APP_SECRET needs a default value or the logger causes crash

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
-APP_ID=
-APP_SECRET=
-WEBHOOK_SECRET=
+APP_ID=<your application ID from Workspace>
+APP_SECRET=<your application secret from Workspace>
+WEBHOOK_SECRET=<your webhook secret from Workspace>
 BOT_NAME=workspace-starter
 PORT=3000
