--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
-APP_ID=<your application ID from Workspace>
-APP_SECRET=<your application secret from Workspace>
-WEBHOOK_SECRET=<your webhook secret from Workspace>
+APP_ID=<your app id>
+APP_SECRET=<your app secret>
+WEBHOOK_SECRET=<your webhook secret>
 BOT_NAME=workspace-starter
 PORT=3000
+OAUTH_REDIRECT_URI=<your oauth uri>
